changing due to depraction warning from compiler